# reaper-desktop

./: .gitignore  CHANGELOG.md  CLAUDE.md  CRITICAL_FIXES_REQUIRED.md  Cargo.toml  FEATURES.md  LICENSE  Makefile  PLATFORM_ABSTRACTION.md  PROJECT_PROGRESS.md  Package.swift  README.md  ROADMAP.md  XPC_CODE_REVIEW.md  build_app_bundle.sh  build_menubar.sh  deploy.sh  fix_icon.sh
ReaperApp/: Info.plist  Package.swift
ReaperApp/Sources/: AppState.swift  ConfirmationDialog.swift  ContentView.swift  DiskAnalysisViewModel.swift  DiskView.swift  FocusedValues.swift  HighCpuView.swift  KeyboardShortcuts.swift  MemoryView.swift  NetworkView.swift  NotificationView.swift  ProcessDetailView.swift  ProcessListView.swift  ProcessTreeView.swift  ReaperApp.swift  ResizableTableHeader.swift  RustBridge.swift  SystemMetricsView.swift  TableEnhancements.swift  ThermalMonitorView.swift
ReaperApp/Sources/CHeaders/: cpu_monitor_core.h
ReaperMenuBar/: Info.plist  Package.swift
ReaperMenuBar/Sources/: CPUMonitor.swift  ReaperMenuBarApp.swift  StatusItemController.swift  SystemMonitor.swift
ReaperMetricsService/: Package.swift  com.reaper.metrics.plist  install.sh  uninstall.sh
ReaperMetricsService/Sources/: ReaperMetricsExporter.swift  ReaperMetricsServiceDelegate.swift  RustMetricsProvider.swift  main.swift
ReaperMetricsService/Tests/: XPCExportedObjectTests.swift  XPCServiceDelegateTests.swift
ReaperShared/: Package.swift
ReaperShared/Sources/: CpuMetricsData.swift  DiskMetricsData.swift  FFIUtilities.swift  MetricsManager.swift  MetricsProviderProtocol.swift  ReaperMetricsProtocol.swift  RustMetricsProvider.swift  TemperatureData.swift  XPCMetricsClient.swift
ReaperShared/Tests/: MetricsManagerTests.swift  MetricsProviderTests.swift  MetricsTypesTests.swift  PointerSafetyTests.swift  RustMetricsProviderTests.swift  ServiceNameConsistencyTests.swift  XPCMetricsClientTests.swift  XPCProtocolTests.swift
Resources/: AppIcon.icns
core/: Cargo.toml
core/src/: lib.rs
core/src/common/: mod.rs
core/src/ffi/: mod.rs
core/src/platform/: mod.rs  tests.rs
core/src/platform/macos/: analyzer.rs  kernel.rs  mod.rs  process.rs  system.rs
core/src/platform/windows/: kernel.rs  mod.rs  process.rs  system.rs
cpu-monitor/: .gitignore  Cargo.toml  Makefile  Package.swift  build.sh
cpu-monitor/rust-core/: Cargo.toml  build.rs
cpu-monitor/rust-core/src/: cpu_analyzer.rs  ffi.rs  lib.rs  process_monitor.rs
cpu-monitor/swift-ui/Sources/CPUMonitorApp/: CPUMonitorApp.swift  HighCpuView.swift  ProcessListView.swift  RustBridge.swift  SystemMetricsView.swift
monitors/cpu/: Cargo.toml
monitors/cpu/src/: cpu_analyzer.rs  cpu_history.rs  cpu_throttler.rs  ffi.rs  flame_graph.rs  kernel_interface.rs  lib.rs  process_details.rs  process_limiter.rs  process_monitor.rs  process_tree.rs  thermal_monitor.rs
monitors/disk/: Cargo.toml
monitors/disk/src/: disk_monitor.rs  ffi.rs  file_analyzer.rs  lib.rs
monitors/disk/tests/: ffi_safety_tests.rs
monitors/hardware/: Cargo.toml
monitors/hardware/src/: ffi.rs  hardware_monitor.rs  lib.rs
monitors/memory/: Cargo.toml
monitors/memory/src/: ffi.rs  lib.rs  memory_monitor.rs
monitors/network/: Cargo.toml
monitors/network/src/: bandwidth_monitor.rs  connection_tracker.rs  ffi.rs  lib.rs  network_monitor.rs
scripts/: manage_menubar_startup.sh
