[workspace]
members = [
    "core",
    "monitors/cpu",
    "monitors/memory",
    "monitors/disk",
    "monitors/network",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Reaper Team"]

[workspace.dependencies]
libc = "0.2"
sysinfo = "0.30"
mach2 = "0.4"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true