[workspace]
members = [
    "core",
    "monitors/cpu",
    "monitors/memory",
    "monitors/disk",
    "monitors/network",
    "monitors/hardware",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Reaper Team"]

[workspace.dependencies]
sysinfo = "0.30"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Platform-specific dependencies (still in workspace for consistency)
libc = "0.2"
mach2 = "0.4"
core-foundation = "0.9"

# Future Windows dependencies (commented for now)
# windows = "0.52"
# winapi = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true