[package]
name = "cpu-monitor-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "cpu_monitor_core"
crate-type = ["staticlib", "cdylib"]

[dependencies]
libc = "0.2"
sysinfo = "0.30"
mach2 = "0.4"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
cbindgen = "0.26"

[features]
default = []