[package]
name = "reaper-disk-monitor"
version = { workspace = true }
edition = { workspace = true }

[lib]
name = "reaper_disk_monitor"
crate-type = ["staticlib", "cdylib"]

[[bin]]
name = "test_disk"
path = "src/bin/test_disk.rs"

[dependencies]
reaper-core = { path = "../../core" }
sysinfo = { workspace = true }
serde = { workspace = true }
once_cell = { workspace = true }
blake3 = "1.5"
rayon = "1.8"
parking_lot = "0.12"
crossbeam = "0.8"

[dev-dependencies]
tempfile = "3.8"